--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,9 @@ Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
 Markdown==3.1.1
 matplotlib==3.1.1
-numpy==1.17.2
+mock==3.0.5
+numexpr==2.7.0
+numpy==1.16.5
 pandas==0.25.1
 protobuf==3.9.2
 pyparsing==2.4.2
@@ -23,6 +25,7 @@ scikit-learn==0.21.3
 scipy==1.3.1
 six==1.12.0
 sklearn==0.0
+tables==3.5.2
 tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
